fixed font and working on firefox side

--- a/src/samagri/newtab.css
+++ b/src/samagri/newtab.css
@@ -22,6 +22,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 .Icon {
